final start to code

--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/style/stylesheet.css" />
     <title>Quiz App</title>
   </head>
-  <body></body>
+  <body>
+    <!--head-section-->
+    <head>
+      <h1>Quiz</h1>
+    </head>
+    <!--main-section-->
+    <main></main>
+
+    <!--footer-section-->
+    <footer></footer>
+  </body>
 </html>
