--- a/index.html
+++ b/index.html
@@ -12,10 +12,37 @@
     <head>
       <h1>Quiz</h1>
     </head>
+
     <!--main-section-->
-    <main></main>
+    <main>
+      <section class="question-card1">
+        <p class="question1">How tall is the Empire State Buliding?</p>
+        <button class="answer" type="button">show answer</button>
+      </section>
+
+      <section class="question-card2">
+        <p class="question2">Who lives in the white house?</p>
+        <button class="answer2" type="button">show answer</button>
+      </section>
+
+      <section class="question-card3">
+        <p class="question3">What question should I ask next?</p>
+        <button class="answer3" type="button">show answer</button>
+      </section>
+
+      <section class="question-card4">
+        <p class="question4">Where can you find the "Schwebebahn"?</p>
+        <button class="question4">show answer</button>
+      </section>
+    </main>
 
     <!--footer-section-->
-    <footer></footer>
+    <footer>
+      <nav class="nav">
+        <a>questions</a>
+        <a>bookmarks</a>
+        <a>profile</a>
+      </nav>
+    </footer>
   </body>
 </html>
