--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <!--head-section-->
-    <head>
+    <header>
       <h1>Quiz</h1>
-    </head>
+    </header>
 
     <!--main-section-->
     <main>
@@ -39,9 +39,9 @@
     <!--footer-section-->
     <footer>
       <nav class="nav">
-        <a>questions</a>
-        <a>bookmarks</a>
-        <a>profile</a>
+        <a><p>questions</p></a>
+        <a><p>bookmarks</p></a>
+        <a><p>profile</p></a>
       </nav>
     </footer>
   </body>
