add first color

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
       <section class="question-card4">
         <p class="question4">Where can you find the "Schwebebahn"?</p>
-        <button class="question4">show answer</button>
+        <button class="answer4">show answer</button>
       </section>
     </main>
 
