--- a/index.html
+++ b/index.html
@@ -40,9 +40,13 @@
     <!--footer-section-->
     <footer>
       <nav class="nav">
-        <a><p>questions</p></a>
-        <a><p>bookmarks</p></a>
-        <a><p>profile</p></a>
+        <a href="/index.html">
+          <img src="style/pictures/home-black.jpeg" alt="home"
+        /></a>
+        <a href="">
+          <img src="style/pictures/bookmark.png" alt="bookmarks"
+        /></a>
+        <a href=""> <img src="style/pictures/profile.png" alt="profile" /></a>
       </nav>
     </footer>
   </body>
